# tuxgal

./: CMakeLists.txt  README.md
BspLoader/: CMakeLists.txt
CharacterDemo/: CMakeLists.txt  CharacterDemo.cpp  CharacterDemo.h  main.cpp
GlutBtApplication/: BtApplication.cpp  BtApplication.h  CMakeLists.txt  GlutBtApplication.cpp  GlutBtApplication.h  GlutStuff.cpp  GlutStuff.h
PlanetDemo/: CMakeLists.txt  PlanetDemo.cpp  PlanetDemo.h  main.cpp
data/: Europa.material  Europa.mesh  Europa.mesh.xml  Ice.material  Snow.material  cube.mesh  cube.mesh.xml  europa.blend  penguin.mesh  penguin.skeleton  sphere.mesh  sphere.mesh.xml
include/tux/: tuxBoxObject.h  tuxCharacterObject.h  tuxDynamicObject.h  tuxGeoCoords.h  tuxObject.h  tuxPlanetObject.h  tuxStaticObject.h  tuxWorld.h
libtux/: CMakeLists.txt  tuxBoxObject.cpp  tuxCharacterObject.cpp  tuxDynamicObject.cpp  tuxGeoCoords.cpp  tuxObject.cpp  tuxPlanetObject.cpp  tuxWorld.cpp
tuxGlutBtApplication/: CMakeLists.txt  tuxGlutBtApplication.cpp  tuxGlutBtApplication.h
tuxOgreApplication/: CMakeLists.txt  main.cpp  tuxInputManager.cpp  tuxInputManager.h  tuxOgreApplication.cpp  tuxOgreApplication.h
tuxgal/: CMakeLists.txt  main.cpp  tuxGlutBtApplication.cpp  tuxGlutBtApplication.h
