CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(TUXGAL)

SET(CMAKE_MODULE_PATH ${TUXGAL_SOURCE_DIR}/cmake)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Bullet REQUIRED)
FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLU REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)


SET(CMAKE_CXX_FLAGS -Wall)

INCLUDE_DIRECTORIES(${TUXGAL_SOURCE_DIR}/include/tux
                    ${Boost_INCLUDE_DIRS}
                    ${BULLET_INCLUDE_DIRS}
                    ${OGRE_INCLUDE_DIRS}
    )
ADD_SUBDIRECTORY(GlutBtApplication)
ADD_SUBDIRECTORY(libtux)
ADD_SUBDIRECTORY(tuxGlutBtApplication)
ADD_SUBDIRECTORY(tuxOgreApplication)

